# Trading

./: .env.example  .gitignore  nifty_intraday_analysis.py  pyproject.toml  restart.sh
kite_wrapper/: __init__.py  auth_server.py  backtest.py  backtest_dashboard.py  base_strategy.py  candle_store.py  client.py  config.py  dashboard.py  strategy.py  token_manager.py  web_app.py
kite_wrapper/strategies/: __init__.py  buy_alternate.py  buy_alternate_candle.py  buy_dip_candle.py  buy_oneshot.py  buy_scale_out.py  buy_scale_out_candle.py  buy_supertrend_dip.py  sar.py  supertrend_candle.py
scripts/: generate_token.py  manual_token.py  run_server.py
